examples/test/testpolicy15195.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15195
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key4: value44
      key43: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value10
          key39: value0
          key41: value24
      podSelector:
        matchLabels:
          key4: value48
